--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ctrl/ngx-emoji-mart",
+  "name": "@coyo/ngx-emoji-mart",
   "version": "0.0.0-placeholder",
   "license": "MIT",
   "scripts": {
@@ -64,7 +64,7 @@
     "tslint": "5.14.0",
     "typescript": "3.2.4"
   },
-  "repository": "TypeCtrl/ngx-emoji-mart",
+  "repository": "mindsmash/ngx-emoji-mart",
   "engines": {
     "npm": ">= 6",
     "node": ">= 8"
