--- a/src/lib/emoji/package.json
+++ b/src/lib/emoji/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ctrl/ngx-emoji-mart/ngx-emoji",
+  "name": "@coyo/ngx-emoji-mart/ngx-emoji",
   "author": "scttcper",
-  "repository": "TypeCtrl/ngx-emoji-mart",
+  "repository": "mindsmash/ngx-emoji-mart",
   "license": "MIT",
   "sideEffects": [ "*.css" ],
   "ngPackage": {
