--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "7.3.5",
     "@angular/common": "7.2.9",
     "@angular/compiler": "7.2.9",
     "@angular/core": "7.2.9",
@@ -74,12 +75,12 @@
   },
   "bundlesize": [
     {
-      "path": "./dist/packages-dist/bundles/ctrl-ngx-emoji-mart.umd.min.js",
+      "path": "./dist/packages-dist/bundles/coyo-ngx-emoji-mart.umd.min.js",
       "maxSize": "10 kB"
     },
     {
-      "path": "./dist/packages-dist/ngx-emoji/bundles/ctrl-ngx-emoji-mart-ngx-emoji.umd.min.js",
-      "maxSize": "60 kB"
+      "path": "./dist/packages-dist/ngx-emoji/bundles/coyo-ngx-emoji-mart-ngx-emoji.umd.min.js",
+      "maxSize": "10 kB"
     }
   ]
 }
